<resources>
    <!-- Keep that commented out. It will lead to compile errors -->
    <!--<string name="app_name">Bluetooth LE Spam</string>-->

    <string name="bottom_nav_start">Info</string>
    <string name="bottom_nav_advertise">Advertise</string>
    <string name="bottom_nav_detect">Detect</string>

    <string name="action_settings">Settings</string>
    <string name="action_set_tx_power">TX Power</string>

    <string name="theme_category_title">Theme</string>
    <string name="theme_color_title">App Color</string>
    <string name="theme_color_summary">Use your device\'s color, or pick one</string>
    <string name="theme_color_device">Device</string>

    <string name="menu_preferences">Settings</string>
    <string name="menu_start">Start</string>
    <string name="menu_spam_detector">Spam Detector</string>
    <string name="menu_advertisement">Advertisement</string>

    <string name="menu_fastPairing">Google Fast Pairing</string>
    <string name="menu_swiftPair">Microsoft Swift Pairing</string>
    <string name="menu_continuityDevicePopup">Apple Device Popups</string>
    <string name="menu_continuityActionModal">Apple Action Modals</string>
    <string name="menu_kitchenSink">Kitchen Sink (Randomize all)</string>

    <string name="preference_key_use_legacy_advertising">preferenceKeyUseLegacyAdvertising</string>
    <string name="preference_key_interval_advertising_queue_handler">preferenceKeyIntervalAdvertisingQueueHandler</string>
    <string name="preference_title_use_legacy_advertising">Legacy Advertising</string>
    <string name="preference_summary_use_legacy_advertising">Use Bluetooth 4 Compatible BLE Advertising</string>

    <string name="power_level_high">High</string>
    <string name="power_level_medium">Medium</string>
    <string name="power_level_low">Low</string>
    <string name="power_level_ultra_low">Ultra Low</string>
    <string name="power_dialog_title">Select TX Power</string>

    <string-array name="spinner_entries_tx_power">
        <item name="tx_power_high">High</item>
        <item name="tx_power_medium">Medium</item>
        <item name="tx_power_low">Low</item>
        <item name="tx_power_ultralow">Ultra Low</item>
    </string-array>

    <string name="startfragment_requirements_checking">Checking Requirements…</string>

    <!-- Advertisement Set Types -->
    <string name="ad_set_type_undefined">Undefined Type</string>
    <string name="ad_set_type_fast_pairing">Fast Pairing</string>
    <string name="ad_set_type_fast_pairing_device">Fast Pairing Device</string>
    <string name="ad_set_type_fast_pairing_non_production">Fast Pairing Non-Production</string>
    <string name="ad_set_type_fast_pairing_phone_setup">Fast Pairing Phone Setup</string>
    <string name="ad_set_type_fast_pairing_debug">Fast Pairing Debug</string>
    <string name="ad_set_type_continuity_new_device">New Apple Device</string>
    <string name="ad_set_type_continuity_new_airtag">New Airtag</string>
    <string name="ad_set_type_continuity_not_your_device">Not Your Device</string>
    <string name="ad_set_type_continuity_action_modals">Apple Action Modal</string>
    <string name="ad_set_type_continuity_ios17_crash">iOS 17 Crash</string>
    <string name="ad_set_type_swift_pairing">Swift Pairing</string>
    <string name="ad_set_type_easy_setup_buds">Easy Setup Buds</string>
    <string name="ad_set_type_easy_setup_watch">Easy Setup Watch</string>
    <string name="ad_set_type_lovespouse_play">Lovespouse Play</string>
    <string name="ad_set_type_lovespouse_stop">Lovespouse Stop</string>

    <string name="spam_unknown">Unknown Spam</string>
    <string name="spam_detecting_title">Detecting Spam</string>
    <string name="spam_detecting_text">Detecting Flipper Zero and other devices</string>
    <string name="spam_detected_title">Spam Detected</string>

    <!-- Log Settings -->
    <string name="preference_key_enable_logging">enable_logging</string>
    <string name="preference_title_enable_logging">Enable Logging</string>
    <string name="preference_summary_enable_logging">Enable application logging to external storage</string>

    <!-- Log Folder Settings -->
    <string name="preference_key_open_log_folder">open_log_folder</string>
    <string name="preference_title_open_log_folder">Open Log Folder</string>
    <string name="preference_summary_open_log_folder">View application logs in external storage</string>

    <!-- Theme Settings -->
    <string name="preference_theme_mode">Theme Mode</string>
    <string name="preference_theme_mode_light">Light</string>
    <string name="preference_theme_mode_dark">Dark</string>
    <string name="preference_theme_mode_follow_system">System Default</string>
    <string name="preference_theme_mode_oled">OLED</string>

    <!-- Toasts -->
    <string name="toast_no_items_selected">No items selected</string>

    <!-- Permissions -->
    <string name="missing_permissions_title">Missing Permissions</string>
    <string name="missing_permissions_text">Some permissions are missing. Without them, Bluetooth LE Spam will not work properly.</string>
    <string name="missing_permissions_grant">Grant Permissions</string>

    <!-- PR454: device edit/delete/manage + custom SwiftPair -->
    <string name="swift_pair_custom_name_hint">Custom Swift Pair nameΓÇª</string>
    <string name="swift_pair_add">Add</string>
    <string name="swift_pair_custom_added">Custom Swift Pair device added</string>
    <string name="swift_pair_custom_empty">Enter a device name first</string>
    <string name="swift_pair_custom_too_long">Name too long (24 bytes max)</string>
    <string name="swift_pair_custom_exists">This name is already in the list</string>
    <string name="menu_manage_devices">Manage devices</string>
    <string name="device_edit">Edit</string>
    <string name="device_delete">Delete</string>
    <string name="device_save">Save</string>
    <string name="device_deleted">Device removed from the list</string>
    <string name="device_updated">Device updated</string>
    <string name="device_delete_title">Remove device?</string>
    <string name="device_delete_message">%1$s will no longer be advertised. You can restore it later in Manage devices.</string>
    <string name="device_field_title">Device name</string>
    <string name="device_section_manufacturer">Manufacturer data</string>
    <string name="device_section_service">Service data</string>
    <string name="device_section_options">Options</string>
    <string name="device_field_manufacturer_id">Manufacturer ID (hex) #%1$d</string>
    <string name="device_field_manufacturer_data">Manufacturer payload (hex) #%1$d</string>
    <string name="device_field_service_uuid">Service UUID #%1$d</string>
    <string name="device_field_service_data">Service payload (hex) #%1$d</string>
    <string name="device_field_include_name">Include device name</string>
    <string name="device_field_include_tx">Include TX power</string>
    <string name="device_error_empty_title">Enter a device name</string>
    <string name="device_error_bad_hex">Invalid payload: use even-length hex (0-9, a-f)</string>
    <string name="device_error_bad_manufacturer_id">Invalid manufacturer ID: use hex, max FFFF</string>
    <string name="device_error_bad_uuid">Invalid service UUID</string>
    <string name="manage_removed_title">Removed devices</string>
    <string name="manage_removed_empty">No removed devices</string>
    <string name="manage_modified_title">Modified devices</string>
    <string name="manage_modified_empty">No modified devices</string>
    <string name="manage_restore">Restore</string>
    <string name="manage_restored">Device restored</string>
    <string name="manage_reset">Reset all to defaults</string>
    <string name="manage_reset_title">Reset all to defaults?</string>
    <string name="manage_reset_message">This restores every modified device, brings back removed devices and deletes custom devices.</string>
    <string name="manage_reset_done">Defaults restored</string>
    <string name="manage_custom_badge">Custom</string>

</resources>
