<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="Advertising Settings">
        <SwitchPreferenceCompat
            app:key="@string/preference_key_use_legacy_advertising"
            app:title="@string/preference_title_use_legacy_advertising"
            app:summary="@string/preference_summary_use_legacy_advertising"
            app:defaultValue="true"
            app:icon="@drawable/ic_settings_bluetooth"
            />

        <EditTextPreference
            android:defaultValue="1000"
            android:digits="0123456789"
            android:inputType="number|numberDecimal"
            android:key="@string/preference_key_interval_advertising_queue_handler"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="Duration of an Advertisement in Milliseconds. Recommended: 1000 - 10000"
            android:title="Advertisement Duration (ms)"
            android:icon="@drawable/ic_settings_duration" />

        <Preference
            app:key="tx_power"
            app:title="@string/action_set_tx_power"
            app:icon="@drawable/ic_tx_power" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/theme_category_title">
        <de.simon.dankelmann.bluetoothlespam.ui.preferences.ThemePickerPreference
            app:key="theme_seed_color_picker" />

        <de.simon.dankelmann.bluetoothlespam.ui.preferences.ThemeModePickerPreference
            app:key="theme_mode_picker" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Debug Settings">
        <SwitchPreferenceCompat
            app:key="@string/preference_key_enable_logging"
            app:title="@string/preference_title_enable_logging"
            app:summary="@string/preference_summary_enable_logging"
            app:defaultValue="false"
            app:icon="@drawable/ic_settings_logging" />
    </PreferenceCategory>

</PreferenceScreen>