<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_start">

    <fragment
        android:id="@+id/nav_start"
        android:name="de.simon.dankelmann.bluetoothlespam.ui.start.StartFragment"
        android:label="@string/menu_start"
        tools:layout="@layout/fragment_start" />

    <fragment
        android:id="@+id/nav_fast_pairing"
        android:name="de.simon.dankelmann.bluetoothlespam.ui.fastPairing.FastPairingFragment"
        android:label="@string/menu_fastPairing"
        tools:layout="@layout/fragment_fastpairing" />

    <fragment
        android:id="@+id/nav_swift_pair"
        android:name="de.simon.dankelmann.bluetoothlespam.ui.swiftPair.SwiftPairFragment"
        android:label="@string/menu_swiftPair"
        tools:layout="@layout/fragment_swiftpair" />

    <fragment
        android:id="@+id/nav_continuity_device_popups"
        android:name="de.simon.dankelmann.bluetoothlespam.ui.continuityDevicePopUps.ContinuityDevicePopUpsFragment"
        android:label="@string/menu_continuityDevicePopup"
        tools:layout="@layout/fragment_continuity_device_popups" />

    <fragment
        android:id="@+id/nav_continuity_action_modals"
        android:name="de.simon.dankelmann.bluetoothlespam.ui.continuityActionModals.ContinuityActionModalsFragment"
        android:label="@string/menu_continuityActionModal"
        tools:layout="@layout/fragment_continuity_action_modals" />

    <fragment
        android:id="@+id/nav_kitchen_sink"
        android:name="de.simon.dankelmann.bluetoothlespam.ui.kitchenSink.KitchenSinkFragment"
        android:label="@string/menu_kitchenSink"
        tools:layout="@layout/fragment_kitchen_sink" />

    <!--Settings fragment-->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="de.simon.dankelmann.bluetoothlespam.ui.preferences.PreferencesFragment"
        android:label="@string/menu_settings"/>

    <!--Global action-->
    <action android:id="@+id/open_settings_fragment"
        app:destination="@id/settingsFragment"/>

</navigation>